--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html  ng-app="ShoppingListCheckOff" lang="en">
   <head>
-    <script src="/scripts/angular.min.js"></script>
-    <script src="/scripts/app.js"></script>
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
     <title>Shopping List Check Off</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
