Phone number field added

--- a/module5-solution/src/public/signup/info.html
+++ b/module5-solution/src/public/signup/info.html
@@ -7,6 +7,7 @@
   First Name: {{infoCtrl.getFirstName()}} <br>
   Last Name: {{infoCtrl.getLastName()}}<br>
   Email: {{infoCtrl.getEmail()}} <br>
+  Phone: {{infoCtrl.getPhone()}} <br>
   Favorite Dish: {{infoCtrl.getFav().name}}<br>
     <img width="250" height="150" ng-src="{{infoCtrl.basePath}}/images/{{infoCtrl.getFav().short_name}}.jpg" alt="{{infoCtrl.getFav().name}}">
     <p class="menu-item-details">{{infoCtrl.getFav().description}}</p>
