--- a/module5-solution/src/public/signup/signup.html
+++ b/module5-solution/src/public/signup/signup.html
@@ -22,6 +22,16 @@
       </span>
       <br>
 
+      <label for="Phone">Phone</label>
+      <input type="text" name="phone" placeholder="Phone ###-###-####"
+        ng-model="signUpCtrl.phone"
+        pattern="(\d{3})-(\d{3})-(\d{4})"
+        required>
+        <span ng-if="regForm.phone.$invalid && regForm.phone.$touched">
+          Phone must be in the format ###-###-####.
+        </span>
+        <br>
+
       <label for="firstname">Favorite Dish</label>
       <input type="text" name="favorite" placeholder="Favorite dish"
         ng-model="signUpCtrl.fav"> <span ng-if="!signUpCtrl.menuItemExists">
